--- a/ansible/roles/rq/handlers/main.yml
+++ b/ansible/roles/rq/handlers/main.yml
@@ -1,7 +1,4 @@
 ---
 
-- name: restart {{ celery_application_name }}
-  supervisorctl: name={{ celery_application_name }} state=restarted
-
-# - name: restart {{ celeryflower_application_name }}
-#   supervisorctl: name={{ celeryflower_application_name }} state=restarted
+- name: restart rq
+  supervisorctl: name=rq state=restarted
