rq-dashboard set up on /tasks/

--- a/ansible/roles/base/tasks/monitoring.yml
+++ b/ansible/roles/base/tasks/monitoring.yml
@@ -48,6 +48,7 @@
     - /var/spool/rsyslog/bongo_nginx_error
     - /var/spool/rsyslog/bongo_nginx_access
     - /var/spool/rsyslog/bongo_rq
+    - /var/spool/rsyslog/bongo_rq_dashboard
   notify: restart rsyslog
 
 - name: Add nginx logs to rsyslog collection
