--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,14 @@ services:
   - postgresql
   - rabbitmq
   - memcached
+addons:
+  sauce_connect:
+    username: "bjacobel"
+    access_key:
+      secure: "QpAgQkThq5kWL1vnMRR4NvJFIVrJeTyoM/HQMNptUDYdbKuhDalcKyjUQ7l7/kCeG8TPyvoNI4fhSLQrHg+p6493ILdoa3kaQxa2nDuKLdiCitcgiBs+Yc/D22kP1xBK7BrxKeFp1MG1bdl7ium5xeT1ECXZoKHiBASuikHhKe0="
 install:
   - pip install -r reqs/travis.txt
+  - bundle install
 env:
   global:
     - DJANGO_SETTINGS_MODULE="bongo.settings.travis"
@@ -24,7 +30,10 @@ before_script:
   - python manage.py syncdb --noinput
   - python manage.py nltk-init
   - celery -A bongo.apps.bongo worker &
+  - python manage.py runserver &
+  - sc -i $TRAVIS_JOB_NUMBER &
 script:
   - coverage run --source=bongo manage.py test
+  - cd wraith && wraith capture selenium
 after_success:
   - coveralls
