--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ before_script:
   - sc -i $TRAVIS_JOB_NUMBER &
 script:
   - coverage run --source=bongo manage.py test
-  - cd wraith && wraith capture selenium
+  - cd wraith && ../vendor/bundle/bin/wraith capture selenium
 after_success:
   - coveralls
