Add all ruby-related steps to one line in prep for https://github.com/rackerlabs/encore-ui/blob/master/.travis.yml#L24

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ addons:
       secure: "QpAgQkThq5kWL1vnMRR4NvJFIVrJeTyoM/HQMNptUDYdbKuhDalcKyjUQ7l7/kCeG8TPyvoNI4fhSLQrHg+p6493ILdoa3kaQxa2nDuKLdiCitcgiBs+Yc/D22kP1xBK7BrxKeFp1MG1bdl7ium5xeT1ECXZoKHiBASuikHhKe0="
 install:
   - pip install -r reqs/travis.txt
-  - bundle install
 env:
   global:
     - DJANGO_SETTINGS_MODULE="bongo.settings.travis"
@@ -34,6 +33,6 @@ before_script:
   - sc -i $TRAVIS_JOB_NUMBER &
 script:
   - coverage run --source=bongo manage.py test
-  - cd wraith && ../vendor/bundle/bin/wraith capture selenium
+  - cd wraith && bundle install && bundle exec wraith capture selenium
 after_success:
   - coveralls
