Invalid type received for 'tunnel-identifier', got '356.2' of type '<type 'float'>' but Sauce OnDemand expects 'string'.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - cd wraith && bundle install && cd ../
 cache:
   directories:
-  - vendor/bundle
+  - wraith/vendor/bundle
   - $HOME/.pip-cache/
   - /home/travis/virtualenv/python2.7.9
   - /home/travis/virtualenv/python3.4.2
