Yaml interprets this as a float even if I .to_s

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ cache:
   - $HOME/.pip-cache/
   - /home/travis/virtualenv/python2.7.9
   - /home/travis/virtualenv/python3.4.2
+  - /home/travis/nltk_data
 env:
   global:
     - DJANGO_SETTINGS_MODULE="bongo.settings.travis"
