--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 hostfile=ansible/inventory/prod
 private_key_file=~/.ssh/citadel.pem
-retry_files_enabled = False
-StrictHostKeyChecking=no
+retry_files_enabled=False
+host_key_checking=False
 nocows=1
