--- a/ansible/roles/web/tasks/setup_django_app.yml
+++ b/ansible/roles/web/tasks/setup_django_app.yml
@@ -1,5 +1,13 @@
 ---
 
+- name: Update pip
+  pip:
+    virtualenv: "{{ virtualenv_path }}"
+    name: pip
+    extra_args: --upgrade
+  tags:
+    - django
+
 - name: Install packages required by the Django app inside virtualenv
   pip:
     virtualenv: "{{ virtualenv_path }}"
