--- a/ansible/env_vars/secure_safe.yml
+++ b/ansible/env_vars/secure_safe.yml
@@ -17,6 +17,8 @@ raven_dsn:
 # API token for Logentries (https://logentries.com/doc/django/)
 logentries_token:
 
+logzio_token:
+
 # New Relic license key
 newrelic_key:
 
