--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -3,8 +3,8 @@
 - name: Provision a {{ application_name }} server
   hosts: all
   sudo: yes
-  sudo_user: root
-  remote_user: "{{ssh_user}}"
+  sudo_user: "{{ ssh_user }}"
+  remote_user: "{{ ssh_user }}"
   vars_files:
     - env_vars/base.yml
     - env_vars/secure.yml
