--- a/ansible/roles/web/tasks/setup_nginx.yml
+++ b/ansible/roles/web/tasks/setup_nginx.yml
@@ -32,6 +32,14 @@
     dest: "{{ ssl_dest_dir }}/{{ application_name }}.key"
   notify: restart nginx
 
+- name: Create sites-enabled and sites-available
+  file:
+    state: directory
+    path: "{{ item }}"
+  with_items:
+    - /etc/nginx/sites-enabled
+    - /etc/nginx/sites-available
+
 - name: Create the Nginx configuration file
   template:
     src: nginx_site_config.j2
